@@ -10,6 +10,7 @@ New features:
 	* BUG 406805 - support für directory structures in ROOT files
 	* Automatically update curves if a data column deleted before was re-added again (during the import or manually)
 	* When auto-scaling in the plot take also the error bars into account, if available
+	* For live data sources allow to save the relative path to the data source
 
 UX improvements:
 	* in the "Import Data" dialog show the history of the recently imported files
